frontend/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing                                    
    alb.ingress.kubernetes.io/subnets: subnet-044139eae37fc6096, subnet-0af959aa8e3316f97 # public subnet에 위치
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-frontend-service
            port:
              number: 80
